--- a/Rapport/1Chapters/Implementation/communication.tex
+++ b/Rapport/1Chapters/Implementation/communication.tex
@@ -1,6 +1,6 @@
 \chapter{Communication}
 
-It is desirable that the system can be controlled from a user interface. The development board supports a OLED display, and two buttons that can be used to interact with the system, but to add more flexibility to the user interface, a GUI is designed on a PC. To data exchange between the DSP and a PC a communication interface is needed. The DSP has an UART hardware device which is chosen to be used as the communication interface. 
+It is desirable that the system can be controlled from an user interface. The development board supports a OLED display, and two buttons that can be used to interact with the system, but to add more flexibility to the user interface, a GUI is designed on a PC. To data exchange between the DSP and a PC a communication interface is needed. The DSP has an UART hardware device which is chosen to be used as the communication interface. 
 
 \section{Communication between DSP and PC}
 
@@ -23,7 +23,7 @@ Most of the features are not necessary for the system, but are still nice-to-hav
 \label{fig:communicationBlock}
 \end{figure}
 
-Most of the features which will be implemented do not require many design modification, because of the properties the system has. As the spectrum of the audio signal is already divided into octave bands, it is easy to implement an equalizer since it only requires a adjustable gain controller to each band and a spectrum analyser only requires an RMS algorithm that can calculate the RMS value of the output of each band. 
+Most of the features which will be implemented do not require many design modification, because of the properties the system inherits. As the spectrum of the audio signal is already divided into octave bands, it is easy to implement an equalizer since it only requires a adjustable gain controller to each band and a spectrum analyser only requires an RMS algorithm that can calculate the RMS value of the output of each band. 
 
 A PC program is designed in C\# in Visual Studio as it is easy and straightforward to design GUI's. The final layout and design of the GUI is seen in \autoref{fig:GUI}.
 
@@ -44,7 +44,7 @@ A PC program is designed in C\# in Visual Studio as it is easy and straightforwa
 \label{fig:GUI}
 \end{figure}
 
-There are two tabs available for the user to use. Under settings the user must select the COM port in which the DSP is connected to. After establishing the connection the user can use the user controls in the application tab. From this tab the user can adjust the volume, equalize, bypass the system and observe the RMS value for each band. The next sections will discuss the communication protocol and implementation of each feature.
+There are two tabs available for the user to use. Under settings the user must select the COM port in which the DSP is connected to. After establishing the connection the user can use the controls in the application tab. From this tab the user can adjust the volume, equalize, bypass the system and observe the RMS value for each band. The next sections will discuss the communication protocol and implementation of each feature.
 
 
 \section{Volume Controller, Equalizer and Bypass}\label{sec:Bypass}
@@ -59,11 +59,11 @@ The data that is received by the DSP are parameters for the volume controller, e
 The header-byte is used to tell the DSP which parameter the user desires to adjust. If the header byte is 1 then the DSP knows that the incomming data-byte is a equalization gain for the lowest octave band. If the header is 2 then the gain is applied to the second last octave and so on. A header-byte of 10 is a volume control adjustment and 11 is the bypass function. The check-byte is used to ensure that data received is not out-of-sync such that the probability of reading wrong data is lowered.
 
 \subsection*{Volume Controller and Equalizer}
-The volume controller is basically just a gain that is applied to the input signal. The resolution of the gain controller is only 7-bit and not 8-bit because of a problem with implementing a 7-bit unsigned char in visual studio. A resolution of 7-bit corresponds to step size of $\frac{1}{128}$. As the steps for the volume controller is implemented in linear scale transmitting 127 corresponds to a gain of 0 dB, 63 to -6 dB, and 0 to $-\inf$. The expression is as follows:
+The volume controller is a gain which is applied to the input signal. The resolution of the gain controller is only 7-bit and not 8-bit because of a problem with implementing a 7-bit unsigned char in visual studio. A resolution of 7-bit corresponds to a step size of $\frac{1}{128}$. As the steps for the volume controller is implemented in linear scale transmitting 127 corresponds to a gain of 0 dB, 63 to -6 dB, and 0 to $-\inf$. The expression is as follows:
 \begin{equation}
 G_{\text{dB}} = 20 \log 10 \left( \frac{G}{127} \right)
 \end{equation}
-The linear solution is not as good as a logarithmic volume controller which would give a better user experience because of the human hearing, but a linear scale is easier and sufficient to demonstrate the concept of a volume controller. With the linear scaled volume controller the lowest attenuation before muting the signal is -42.0761 which correspond to transmitting 1. To adjust the gain following code is executed in the DSP.
+The linear solution is not as good as a logarithmic volume controller which would give a better user experience because of the human hearing, but a linear scale is easier and sufficient to demonstrate the concept of a volume controller. With the linear scaled volume controller the lowest attenuation before muting the signal is -42 which correspond to transmitting 1. To adjust the gain the following code is executed in the DSP.
 
 \begin{lstlisting}[language=C, caption = {Gain adjustment in DSP},label={listingVolume}]
 audioIn = (long)audioIn*volume>>7;
@@ -73,16 +73,16 @@ Because the resolution of the volume controller is 8-bit with a signed char (Q7 
 
 The implementation of the equalizer is similar to the volume controller. Instead of applying the gain on the input signal the gain is applied on a band-passed signal. The code is seen in \autoref{listingEq}.
 
-\begin{lstlisting}[language=C, caption = {Gain adjustment in DSP},label={listingEq}]
+\begin{lstlisting}[language=C, caption = {Equalizer Gain adjustment in DSP},label={listingEq}]
 band1 = (long)array[184]*gainBand1>>7;
 \end{lstlisting}
 
 The resolution of the equalizer is the same as the volume controller. 
 
 \subsection*{Bypass}
-The simplest type of bypass is by setting the input signal of the audio codec as the output. Since the audio signal in the system is delayed, changing the output between bypass and system will give an unpleasant transition. In order to give a smoother transition, a delay must be applied to the bypassed input signal as well. The total amount of delay must the same delay applied to band 1 in the multistage system. The total amount of delay in band 1 is calculated to 5333 sample delay. The delay corresponds to 111 ms for a 48 kHz system. The implementation of the delay is seen in \autoref{listingByPass}.
+The simplest type of bypass is by setting the input signal of the audio codec as the output. Since the audio signal in the system is delayed, changing the output between bypass and system will give an unpleasant transition. In order to give a smoother transition, a delay must be applied to the bypassed input signal as well. The total amount of delay must the same delay applied to band 1 in the multistage system + 25. The total amount of delay in band 1 is calculated to 5333 sample delay. The delay corresponds to 111 ms for a 48 kHz system. The implementation of the delay is seen in \autoref{listingByPass}.
 
-\begin{lstlisting}[language=C, caption = {Delay function for bypass},label={listingByPass}]
+\begin{lstlisting}[language=C, caption = {Delay function for bypass.},label={listingByPass}]
 int16 delayBypass(int16 dataIn, int16 *dataBuffer, int16 *dataPtr){
 	int16 temp;
 	temp = dataBuffer[*dataPtr]; // Store oldest data in temp
@@ -95,9 +95,9 @@ int16 delayBypass(int16 dataIn, int16 *dataBuffer, int16 *dataPtr){
 }
 \end{lstlisting}
 
-Before overwriting the oldest data in the data buffer, the oldest data is stored the a temporary variable. Afterwards the new data is overwriting the oldest data. The oldest data in the temporary variable is then returned.
+Before overwriting the oldest data in the data buffer, the oldest data is stored in a temporary variable. Afterwards the new data is overwriting the oldest data. The oldest data in the temporary variable is then returned.
 
-As the delay is large the delayed samples are stored in Single Access RAM (SARAM) block 2. To do so the pragma directive is used to tell the compiler that it is desired that the data for the delay is stored in SARAM.
+As the delay is large the delayed samples are stored in Single Access RAM block 2. To do so the pragma directive is used to tell the compiler that it is desired that the data for the delay is stored in SARAM.
 
 \begin{lstlisting}[language=C, caption = {Pragma for delay buffer for bypass.},label={listingPragma}]
 #pragma DATA_SECTION(BypassBuffer, ".BypassArray")
@@ -116,7 +116,7 @@ To implement a spectrum analyser RMS-calculators are implemented as a C-function
 \label{fig:communicationProtocolUARTTransmit}
 \end{figure}
 
-The communication protocol consist of a header-byte and 8 data byte and a check byte in the end to reduce the amount of error readings. The check-byte has the same value as the header byte. The first byte in "RMS data" is the RMS value for the lowest octave band while the last is the highest.
+The communication protocol consist of a header-byte, 8 data bytes and a check byte in the end to reduce the amount of error readings. The check-byte has the same value as the header byte. The first byte in "RMS data" is the RMS value for the lowest octave band while the last is the highest.
 
 The RMS-function is called after the RMS limitation. The C-function for the RMS-function is seen in \autoref{listingRMSuart}.
 
