--- a/Rapport/0formalia/titlepage.tex
+++ b/Rapport/0formalia/titlepage.tex
@@ -72,5 +72,5 @@
   Fredrik Bajers Vej 7\\
   DK-9220 Aalborg Ø\\}
  }{
- This project concerns the development of a loudspeaker protective system which prevents the loudspeaker coil from hitting the backplate. Multi-band RMS limiters are implemented in a multi-rate system with multi-stages.
+ This project concerns the development of a active loudspeaker protective system which prevents the loudspeaker coil from hitting the backplate. The implemented system is a feedforward system with five RMS limiters are implemented in a multi-rate system to distribute the limitation over multiple bands. The system were implemented into a TMS320C5515 EZDSP and most requirements were fulfilled. 
 }
