--- a/Rapport/1Chapters/Simulation.tex
+++ b/Rapport/1Chapters/Simulation.tex
@@ -71,7 +71,7 @@ Under the simulation, the following settings are set/applied:
 \item The test signal is a logarithmic sweep from 30 Hz to 750 Hz during a 10 second period.
 \end{itemize}
 
-The simulation file and needed scripts are found at \path{CD://something } \todo{insert}
+The simulation file and needed scripts are found at \path{CD://MATLAB/mainDesign2}
 
 
 In the following a 10 second simulation is showed with a graphical output of the following:
