--- a/Rapport/1Chapters/Implementation/Compressor.tex
+++ b/Rapport/1Chapters/Implementation/Compressor.tex
@@ -36,7 +36,7 @@ The algorithm will therefore be using a lookup table to determine the correct ga
 \vspace{2mm}
 When the equation has calculated 1024 values, they are stored in a array and converted to Q15 written in hexadecimals for implementation into the DSP.
 The script for creating the values are located on a MATLAB script at: \\
-\path{CD://CD/Something Somethin}\todo{PATH}. \autoref{fig:LookUptableCal} shows the lookup table values plotted.
+\path{CD://CD/MATLAB/LoopUPTables.m}. \autoref{fig:LookUptableCal} shows the lookup table values plotted.
 
 \begin{figure}[H]
 	\centering
