--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -50,7 +50,7 @@ The analysis has focused on distortion and non-linearities in an active loudspea
 \item Coil hitting the back plate. 
 \end{itemize}
 
-From the situations it is seen that the most critical situation would be if the coil hits the back plate because it could result in damaging or destroying the speaker. Therefore a system should be designed first and foremost to protect the speaker from being damaged. Secondly it should be designed to reduce the amount of distortion in minimum the woofer frequency range (below 200 Hz), thus avoiding peak limitation as protection. The system must be real-time as the system will be used in context with audio streaming\todo{Formulated correctly?}. With this the following problem statement is formulated:
+From the situations it is seen that the most critical situation would be if the coil hits the back plate because it could result in damaging or destroying the speaker. Therefore a system should be designed first and foremost to protect the speaker from being damaged. Secondly it should be designed to reduce the amount of distortion in minimum the woofer frequency range (below 200 Hz), thus avoiding peak limitation as protection. The system must be real-time as the system will be used in context with audio streaming. The following problem statement is formulated:
 
 \begin{center}
 \label{ProblemStatement}
