--- a/Rapport/2Appendix/AcceptRMS.tex
+++ b/Rapport/2Appendix/AcceptRMS.tex
@@ -2,7 +2,7 @@
 The purpose of this test is verify requirement 10, 11, 12, 13, and 14 concerning the RMS limiter.
 
 \section{Setup}
-The setup of this test are depicted in \autoref{fig:AcceptFreqResponse}, where the equipment is catalogued in \autoref{tab:UsedEquipmentFreqResponse}, and described as follows:
+The setup of this test are depicted in \autoref{fig:AcceptFreqResponse2}, where the equipment is catalogued in \autoref{tab:UsedEquipmentFreqResponse}, and described as follows:
 
 \begin{itemize}
 	\item Frequency response will be measured by a Harmonie analyzer.
@@ -21,8 +21,8 @@ The setup of this test are depicted in \autoref{fig:AcceptFreqResponse}, where t
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\textwidth]{FreqReponseSetup.png}
-\label{fig:AcceptFreqResponse}
 \caption{Test setup.}
+\label{fig:AcceptFreqResponse2}
 \end{figure}
 
 \subsection*{Equipment used and AAU-no.}
