--- a/Rapport/1Chapters/EndFormalia/Perspectivation.tex
+++ b/Rapport/1Chapters/EndFormalia/Perspectivation.tex
@@ -1,9 +1,9 @@
 \chapter{Perspective}
-This chapter will perspective on the final product and examine what a final product would have looked like if time and resources would not be a limiting factor.
+This chapter will give a perspective on the final product and examine what a final product would have looked like if time and resources would not be a limiting factor.
 
-The project has only applied to a single loudspeaker, the DALI Zensor 5. This is a relative large loudspeaker so to damage the drivers, a very high volume level is needed. The volume levels are not necessary common in daily use so this loudspeaker is probably not the optimal sized speaker to apply the protection system on. However small loudspeakers which because of their physical size do not have to play at high volumes for the loudspeaker to reach its limits would be an optimal loudspeaker size for the protection system. 
+The project has only applied to a single loudspeaker, the DALI Zensor 5. This is a relative large loudspeaker so to damage the drivers, a very high volume level is needed. The volume levels are not necessarly common in daily use so this loudspeaker is probably not the optimal sized speaker to apply the protection system on. However small loudspeakers which because of their physical size do not have to play at high volumes for the loudspeaker to reach its limits would be an optimal loudspeaker size for the protection system. 
 
-By having a protection system implemented in an active speaker it would be possible to increase the power of the amplifier which gives the amplifier more control of the loudspeaker. So even though the amplifier's power would be able to damage the loudspeaker it would not happen because of the limiters in the protection system. With more power in the amplifier some music genres, for example be jazz or folk, would also be able to play at higher volumes because only loud bass will activate the limiters. 
+By having a protection system implemented in an active speaker it would be possible to increase the power of the amplifier which gives the amplifier more control of the loudspeaker. So even though the amplifier's power would be able to damage the loudspeaker it would not happen because of the limiters in the protection system. With more power in the amplifier some music genres, for example jazz or folk, would also be able to play at higher volumes because only loud bass will activate the limiters. 
 
-The final product could also have been expanded from only a protection system to a pre-amplifier, with an active crossover, in an active loudspeaker instead of being an extra system which needs to be inserted. This would probably have to be done for such a system to actually being implemented in a finished product. This would lead to new hardware platform because the audio codec TLV320AIC3204 does not meet the requirements of IEC 60268-15 standard.  
+The final product could also have been expanded from only a protection system to a pre-amplifier, with an active crossover, instead of being an extra system which needs to be inserted. This would probably have to be done for such a system to actually being implemented in a finished product. This would lead to new hardware platform because the audio codec TLV320AIC3204 does not meet the requirements of IEC 60268-15 standard.  
 
