--- a/Rapport/1Chapters/Implementation/finalProduct.tex
+++ b/Rapport/1Chapters/Implementation/finalProduct.tex
@@ -18,7 +18,7 @@ The final product has following features:
 \item Eight band spectrum analyser. A RMS calculator is implemented in each band, and the RMS value in the RMS calculators are then transmitted via UART to the GUI. From the GUI the user can view the RMS value on each band.
 \end{itemize}
 
-To verify the implemented features and examine if the system fulfils the requirements, an acceptance test is performed.
+To verify the implemented features and examine if the system fulfills the requirements, an acceptance test is performed.
 
 
 
